2007-09-28 -- release 0.1_0.5

    * added Coat::Types for type constraints validation
    * bug fixes

2007-09-17 -- release 0.1_0.2 -- Alexis Sukrieh

    * development version, according to Perl versionning conventions.
    * Rewrite of all the hooks handling with closures instead of evals
    * Don't use AUTOLOAD anymore for accessors, declare closures as well.
    * Lots of Cleaning

2007-09-14 -- release 0.1 -- Alexis Sukrieh

  * Initial release
    - attribute declaration
    - inheritance
    - automagic dynamic accessors
    - hooks (before, after and around)
