@@ -1,3 +1,9 @@
+2007-10-11 -- release 0.1_0.6
+
+    * Supports for "required" and "trigger" options
+    * Better documentation
+    * Copying statement in README
+
 2007-09-28 -- release 0.1_0.5
 
     * added Coat::Types for type constraints validation
